# pocomc-bilby

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: publish.yml  tests.yml
examples/: fast_gw.py
src/pocomc_bilby/: __init__.py  plugin.py  prior.py
tests/: test_bilby_integration.py
