[build-system]
requires = ["setuptools>=45", "setuptools-scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "pocomc-bilby"
authors = [
    {name = "Michael J. Williams", email = "michaeljw1@googlemail.com"},
]
description = ""
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "bilby",
    "numpy",
    "pocomc<1.0",
]

dynamic = ["version"]

[project.optional-dependencies]
test = [
    "pytest",
]

[tool.setuptools_scm]

[tool.black]
line-length = 79

[project.entry-points."bilby.samplers"]
pocomc = "pocomc_bilby.plugin:PocoMC"
